Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81618

Fix revisioning of QtQuick3D plugin

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.15.0 Alpha, 5.15
    • 5.14
    • Quick: 3D
    • None
    • 495b89c3dbdef48bdcb2a3e6225a70c5ef82696f (qt/qtquick3d/5.15)
    • Qt Quick 3D - Week 5/6

      QtQuick3D versioning is currently a mess. We need to update all "1.0" references to "1.14", and new APIs for Qt 5.15 to "1.15".

      Design Studio continues using Qt 5.14 for the next version, so Design Studio importer does not need to be updated.

        For Gerrit Dashboard: QTBUG-81618
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes