Fix revisioning of QML plugin

Fixes: QTBUG-81618
Change-Id: I024a10877c1b79817f838a13f0d7865e5c18a762
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>