src/imports/helpers/plugin.cpp
@@ -47,8 +47,8 @@ public:
     {
         Q_ASSERT(QLatin1String(uri) == QLatin1String("QtQuick3D.Helpers"));
 
-        qmlRegisterType<PointerPlane>(uri, 1, 0, "PointerPlane");
-        qmlRegisterType<GridGeometry>(uri, 1, 0, "GridGeometry");
+        qmlRegisterType<PointerPlane>(uri, 1, 14, "PointerPlane");
+        qmlRegisterType<GridGeometry>(uri, 1, 14, "GridGeometry");
 
         // Auto-increment the import to stay in sync with ALL future QtQuick minor versions from 5.12 onward
         qmlRegisterModule(uri, 1, QT_VERSION_MINOR);
