examples/quick3d/customshaders/main.qml
@@ -50,7 +50,7 @@
 
 import QtQuick 2.12
 import QtQuick.Window 2.11
-import QtQuick3D 1.0
+import QtQuick3D 1.14
 import QtQuick.Controls 2.4
 
 Window {
